ajustando para o uso

--- a/SQLRegna/Templates/index.html
+++ b/SQLRegna/Templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <title>RU</title>
@@ -50,9 +50,9 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#sobreru">Sobre o RU</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#services">Fila do RU</a></li>
+          <li><a href="#portfolio">Cadastro Cardápio Vegetariano</a></li>
+          <li><a href="#team">Cardápio</a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -81,9 +81,9 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1>Welcome to Regna</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started">Get Started</a>
+      <h1>Bem vindo ao RU</h1>
+      <!-- <h2>We are team of talanted designers making websites with Bootstrap</h2> -->
+      <a href="#about" class="btn-get-started">Início</a>
     </div>
   </section><!-- #hero -->
 
@@ -98,40 +98,49 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">Um pouco sobre o RU</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <p> O Restaurante Universitário (RU) é parte integrante dos Programas de Assistência ao discente desenvolvido pela PROGEST/UFRPE. Tem como valores básicos: qualidade, valorização profissional, comprometimento e responsabilidade social. Sendo assim, seu principal objetivo é atender com qualidade, oferecer refeições a preços reduzidos aos discentes regularmente matriculados na UFRPE e proporcionar aos funcionários que compõe a equipe do restaurante um bom ambiente de trabalho.
 
-            <div class="icon-box wow fadeInUp">
+                Oferece aos discentes, servidores técnicos-administrativos e docentes refeições de qualidade, tem capacidade de acomodar simultaneamente 482 usuários, e atende em média 1600 pessoas no horário do almoço e 1000 pessoas no jantar.
+
+                E por falar em refeições de qualidade, uma boa alimentação contribui como mais uma estratégia para o aumento do desempenho acadêmico, pois acarreta na melhoria de condições nutricionais dos discentes. Tudo isso pode ser comprovado através de estudos que desenvolvidos pelos setores de assistência estudantil das IFEs. Nesses estudos se tem constatado a importância de investimentos no RU’s como sendo parte integrante de políticas que visam a permanência dos discentes na universidade, a fim de contribuir para a conclusão do curso de graduação com maior qualidade acadêmica.
+
+                Pensando nisso, a UFRPE tem investido na melhoria da estrutura física do RU, e consequentemente na melhoria do bem estar geral dos discentes por meio da oferta de uma alimentação de qualidade no local do próprio estudo.
+
+                Em sua estrutura funcional, o RU é composto por uma Coordenadoria de Gestão de Alimentação e Restaurante Universitário, Nutricionista, Economista Doméstico e profissionais da área Administrativa, além de pessoal capacitado na produção e manipulação de alimentos, atuando também como espaço pedagógico para alguns cursos de graduação da UFRPE, a exemplo de Bacharelado em Economia Doméstica e Bacharelado em Gastronomia e Segurança Alimentar.
+
+                Os cardápios dispõem de refeições em quarto categorias: 1) Trivial, 2) Vegetariano, 3) Dieta e 4) Fast Grill. Todo cardápio é planejado por nutricionistas, economistas domésticos e especialistas em gastronomia e segurança alimentar para atender o aporte calórico indicado para a população universitária.</p>
+
+
+            <!-- <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
               <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div>
+            </div> -->
 
-            <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
+            <!-- <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
               <h4 class="title"><a href="">Magni Dolores</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
+            </div> -->
 
-            <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
+            <!-- <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
               <h4 class="title"><a href="">Dolor Sitema</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
+            </div> -->
 
           </div>
 
-          <div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
+          <!--<div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
         </div>
 
-      </div>
-    </section><!-- #about -->
+      </div> -->
+    </section> <!-- #about -->
 
     <!--==========================
       Facts Section
     ============================-->
-    <section id="facts">
+    <!--<section id="facts">
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Facts</h3>
@@ -161,7 +170,7 @@
 
   			</div>
 
-      </div>
+      </div> -->
     </section><!-- #facts -->
 
     <!--==========================
@@ -173,7 +182,7 @@
           <h3 class="section-title">Services</h3>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
               <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
@@ -219,13 +228,13 @@
           </div>
         </div>
 
-      </div>
+      </div> -->
     </section><!-- #services -->
 
     <!--==========================
     Call To Action Section
     ============================-->
-    <section id="call-to-action">
+    <!--<section id="call-to-action">
       <div class="container wow fadeIn">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
@@ -238,7 +247,7 @@
         </div>
 
       </div>
-    </section><!-- #call-to-action -->
+    </section> --><!-- #call-to-action -->
 
     <!--==========================
       Portfolio Section
@@ -249,7 +258,7 @@
           <h3 class="section-title">Portfolio</h3>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
-        <div class="row">
+        <!--<div class="row">
 
           <div class="col-lg-12">
             <ul id="portfolio-flters">
@@ -385,8 +394,8 @@
 
         </div>
 
-      </div>
-    </section><!-- #portfolio -->
+      </div> -->
+    </section> <!-- #portfolio -->
 
     <!--==========================
       Team Section
@@ -397,7 +406,7 @@
           <h3 class="section-title">Team</h3>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
-        <div class="row">
+       <!-- <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-1.jpg" alt=""></div>
@@ -455,8 +464,8 @@
           </div>
         </div>
 
-      </div>
-    </section><!-- #team -->
+      </div> -->
+    </section> <!-- #team -->
 
     <!--==========================
       Contact Section
