--- a/SQLRegna/Templates/index.html
+++ b/SQLRegna/Templates/index.html
@@ -53,7 +53,7 @@
           <li><a href="#services">Fila do RU</a></li>
           <li><a href="#portfolio">Cadastro Cardápio Vegetariano</a></li>
           <li><a href="#team">Cardápio</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+         <!-- <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="menu-has-children"><a href="#">Drop Down 2</a>
@@ -69,7 +69,7 @@
               <li><a href="#">Drop Down 4</a></li>
               <li><a href="#">Drop Down 5</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -98,7 +98,7 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">Um pouco sobre o RU</h2>
-            <p> O Restaurante Universitário (RU) é parte integrante dos Programas de Assistência ao discente desenvolvido pela PROGEST/UFRPE. Tem como valores básicos: qualidade, valorização profissional, comprometimento e responsabilidade social. Sendo assim, seu principal objetivo é atender com qualidade, oferecer refeições a preços reduzidos aos discentes regularmente matriculados na UFRPE e proporcionar aos funcionários que compõe a equipe do restaurante um bom ambiente de trabalho.
+            <p class="description"> O Restaurante Universitário (RU) é parte integrante dos Programas de Assistência ao discente desenvolvido pela PROGEST/UFRPE. Tem como valores básicos: qualidade, valorização profissional, comprometimento e responsabilidade social. Sendo assim, seu principal objetivo é atender com qualidade, oferecer refeições a preços reduzidos aos discentes regularmente matriculados na UFRPE e proporcionar aos funcionários que compõe a equipe do restaurante um bom ambiente de trabalho.
 
                 Oferece aos discentes, servidores técnicos-administrativos e docentes refeições de qualidade, tem capacidade de acomodar simultaneamente 482 usuários, e atende em média 1600 pessoas no horário do almoço e 1000 pessoas no jantar.
 
@@ -111,30 +111,30 @@
                 Os cardápios dispõem de refeições em quarto categorias: 1) Trivial, 2) Vegetariano, 3) Dieta e 4) Fast Grill. Todo cardápio é planejado por nutricionistas, economistas domésticos e especialistas em gastronomia e segurança alimentar para atender o aporte calórico indicado para a população universitária.</p>
 
 
-            <!-- <div class="icon-box wow fadeInUp">
+             <!--<div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
               <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div> -->
+              </div>
 
-            <!-- <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
+             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
               <h4 class="title"><a href="">Magni Dolores</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div> -->
+              </div>
 
-            <!-- <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
+              <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
               <h4 class="title"><a href="">Dolor Sitema</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div> -->
+              </div> -->
 
           </div>
 
-          <!--<div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
+          <div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
         </div>
 
-      </div> -->
+      </div>
     </section> <!-- #about -->
 
     <!--==========================
@@ -168,9 +168,9 @@
             <p>Hard Workers</p>
   				</div>
 
-  			</div>
+  			</div> -->
 
-      </div> -->
+      </div>
     </section><!-- #facts -->
 
     <!--==========================
@@ -226,9 +226,9 @@
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
-      </div> -->
+      </div>
     </section><!-- #services -->
 
     <!--==========================
@@ -392,9 +392,9 @@
             </a>
           </div>
 
-        </div>
+        </div> -->
 
-      </div> -->
+      </div>
     </section> <!-- #portfolio -->
 
     <!--==========================
@@ -462,9 +462,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-      </div> -->
+      </div>
     </section> <!-- #team -->
 
     <!--==========================
