--- a/SQLRegna/Templates/index.html
+++ b/SQLRegna/Templates/index.html
@@ -40,11 +40,11 @@
   <header id="header">
     <div class="container">
 
-      <div id="logo" class="pull-left">
+     <!-- <div id="logo" class="pull-left">
         <a href="#hero"><img src="/static/img/logo.png" alt="" title="" /></img></a>
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!--<h1><a href="#hero">Regna</a></h1>-->
-      </div>
+         Uncomment below if you prefer to use a text logo
+        <h1><a href="#hero">Regna</a></h1>
+      </div> -->
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
@@ -83,7 +83,6 @@
     <div class="hero-container">
       <h1>Bem vindo ao RU</h1>
       <!-- <h2>We are team of talanted designers making websites with Bootstrap</h2> -->
-      <a href="#about" class="btn-get-started">Início</a>
     </div>
   </section><!-- #hero -->
 
@@ -98,17 +97,16 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">Um pouco sobre o RU</h2>
-            <p class="description"> O Restaurante Universitário (RU) é parte integrante dos Programas de Assistência ao discente desenvolvido pela PROGEST/UFRPE. Tem como valores básicos: qualidade, valorização profissional, comprometimento e responsabilidade social. Sendo assim, seu principal objetivo é atender com qualidade, oferecer refeições a preços reduzidos aos discentes regularmente matriculados na UFRPE e proporcionar aos funcionários que compõe a equipe do restaurante um bom ambiente de trabalho.
-
-                Oferece aos discentes, servidores técnicos-administrativos e docentes refeições de qualidade, tem capacidade de acomodar simultaneamente 482 usuários, e atende em média 1600 pessoas no horário do almoço e 1000 pessoas no jantar.
-
-                E por falar em refeições de qualidade, uma boa alimentação contribui como mais uma estratégia para o aumento do desempenho acadêmico, pois acarreta na melhoria de condições nutricionais dos discentes. Tudo isso pode ser comprovado através de estudos que desenvolvidos pelos setores de assistência estudantil das IFEs. Nesses estudos se tem constatado a importância de investimentos no RU’s como sendo parte integrante de políticas que visam a permanência dos discentes na universidade, a fim de contribuir para a conclusão do curso de graduação com maior qualidade acadêmica.
-
-                Pensando nisso, a UFRPE tem investido na melhoria da estrutura física do RU, e consequentemente na melhoria do bem estar geral dos discentes por meio da oferta de uma alimentação de qualidade no local do próprio estudo.
-
-                Em sua estrutura funcional, o RU é composto por uma Coordenadoria de Gestão de Alimentação e Restaurante Universitário, Nutricionista, Economista Doméstico e profissionais da área Administrativa, além de pessoal capacitado na produção e manipulação de alimentos, atuando também como espaço pedagógico para alguns cursos de graduação da UFRPE, a exemplo de Bacharelado em Economia Doméstica e Bacharelado em Gastronomia e Segurança Alimentar.
-
-                Os cardápios dispõem de refeições em quarto categorias: 1) Trivial, 2) Vegetariano, 3) Dieta e 4) Fast Grill. Todo cardápio é planejado por nutricionistas, economistas domésticos e especialistas em gastronomia e segurança alimentar para atender o aporte calórico indicado para a população universitária.</p>
+            <p class="description">
+              O Restaurante Universitário (RU) é parte integrante dos Programas de Assistência ao discente desenvolvido pela PROGEST/UFRPE. Tem como valores básicos: qualidade, valorização profissional, comprometimento e responsabilidade social. Sendo assim, seu principal objetivo é atender com qualidade, oferecer refeições a preços reduzidos aos discentes regularmente matriculados na UFRPE e proporcionar aos funcionários que compõe a equipe do restaurante um bom ambiente de trabalho.
+              Oferece aos discentes, servidores técnicos-administrativos e docentes refeições de qualidade, tem capacidade de acomodar simultaneamente 482 usuários, e atende em média 1600 pessoas no horário do almoço e 1000 pessoas no jantar.
+              Os cardápios dispõem de refeições em quatro categorias:</p>
+            <p class="description">
+              <p>1) Trivial</p>
+              <p>2) Vegetariano</p>
+              <p>3) Dieta</p>
+              <p>4) Fast Grill.</p>
+              Todo cardápio é planejado por nutricionistas, economistas domésticos e especialistas em gastronomia e segurança alimentar para atender o aporte calórico indicado para a população universitária.</p>
 
 
              <!--<div class="icon-box wow fadeInUp">
@@ -179,8 +177,8 @@
     <section id="services">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title">Services</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Fila do RU</h3>
+          <p class="section-description">Verifique a estimativa de pessoas que há na fila</p>
         </div>
         <!-- <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -255,8 +253,8 @@
     <section id="portfolio">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Portfolio</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Cadastro Cardápio Vegetariano</h3>
+          <p class="section-description">Realize o seu cadastro para acessar à fila destinada ao cardápio vegetariano</p>
         </div>
         <!--<div class="row">
 
@@ -403,67 +401,82 @@
     <section id="team">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Team</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Cardápio</h3>
+          <p class="section-description">Veja o cardápio da semana</p>
         </div>
-       <!-- <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+       <div class="section-header">
+         <h3 class="section-title">Almoço</h3>
+       </div>
+       <div class="row">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <h4 class="title"><a href="">Segunda</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <h4 class="title"><a href="">Terça</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <h4 class="title"><a href="">Quarta</a></h4>
+              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-2.jpg" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <h4 class="title"><a href="">Quinta</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <h4 class="title"><a href="">Sexta</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            </div>
+          </div>
+        </div>
+        <p class="section-description"></p>
+      <div class="section-header">
+         <h3 class="section-title">Janta</h3>
+       </div>
+       <div class="row">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <h4 class="title"><a href="">Segunda</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <h4 class="title"><a href="">Terça</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <h4 class="title"><a href="">Quarta</a></h4>
+              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <h4 class="title"><a href="">Quinta</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-              <h4>Amanda Jepson</h4>
-              <span>Accountant</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <h4 class="title"><a href="">Sexta</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
-        </div> -->
-
+        </div>
       </div>
     </section> <!-- #team -->
 
@@ -473,74 +486,59 @@
     <section id="contact">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Contact</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Contato</h3>
+          <p class="section-description"></p>
         </div>
       </div>
 
       <!-- Uncomment below if you wan to use dynamic maps -->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d698.4186074208006!2d-34.95114241933297!3d-8.0141666696574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1a200c3aa819%3A0x5d2885454ca45b88!2sRU%20-%20Restaurante%20Universit%C3%A1rio%20da%20UFRPE!5e0!3m2!1spt-BR!2sbr!4v1574432502504!5m2!1spt-BR!2sbr" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d698.4186074208006!2d-34.95114241933297!3d-8.0141666696574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1a200c3aa819%3A0x5d2885454ca45b88!2sRU%20-%20Restaurante%20Universit%C3%A1rio%20da%20UFRPE!5e0!3m2!1spt-BR!2sbr!4v1574432502504!5m2!1spt-BR!2sbr" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe> -->
 
       <div class="container wow fadeInUp mt-5">
         <div class="row justify-content-center">
 
           <div class="col-lg-3 col-md-4">
 
-            <div class="info">
-              <div>
-                <i class="fa fa-map-marker"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
-              </div>
-
-              <div>
-                <i class="fa fa-envelope"></i>
-                <p>info@example.com</p>
-              </div>
-
-              <div>
-                <i class="fa fa-phone"></i>
-                <p>+1 5589 55488 55s</p>
-              </div>
-            </div>
-
             <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
-
           </div>
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
+              <div id="sendmessage">Mensagem enviada com sucesso!</div>
               <div id="errormessage"></div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Escreva sua mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center"><button type="submit">Enviar</button></div>
               </form>
             </div>
           </div>
 
+       <div class="container wow fadeInUp">
+          <div class="section-header">
+          <p class="section-description"></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d698.4186074208006!2d-34.95114241933297!3d-8.0141666696574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1a200c3aa819%3A0x5d2885454ca45b88!2sRU%20-%20Restaurante%20Universit%C3%A1rio%20da%20UFRPE!5e0!3m2!1spt-BR!2sbr!4v1574432502504!5m2!1spt-BR!2sbr" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+       </div>
         </div>
-
       </div>
     </section><!-- #contact -->
 
