--- a/SQLRegna/Templates/index.html
+++ b/SQLRegna/Templates/index.html
@@ -500,9 +500,9 @@
           <div class="col-lg-3 col-md-4">
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://twitter.com/ufrpeonline" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://pt-br.facebook.com/rudaufrpe/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/ufrpe/?hl=pt-br" class="instagram"><i class="fa fa-instagram"></i></a>
             </div>
           </div>
 
