--- a/SQLRegna/Templates/index.html
+++ b/SQLRegna/Templates/index.html
@@ -81,7 +81,7 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1>Bem vindo ao RU</h1>
+      <h1>Bem vindo ao Sistema RU</h1>
       <!-- <h2>We are team of talanted designers making websites with Bootstrap</h2> -->
     </div>
   </section><!-- #hero -->
