add almoço e janta da semana

--- a/SistemaRU/Templates/index.html
+++ b/SistemaRU/Templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>RU</title>
+  <title>Sistema RU</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -98,9 +98,13 @@
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Fila do RU</h3>
-          <p class="section-description">Verifique a estimativa de pessoas que há na fila</p>
+          <div class="form">
+            <p class="section-description">Verifique a estimativa de pessoas que há na fila</p>
+              <form action="" method="post" role="form" class="estimar">
+                <div class="text-center"><button type="submit">Estimar</button></div>
+              </form>
+          </div>
         </div>
-
       </div>
     </section><!-- #fila -->
 
@@ -146,17 +150,17 @@
             <div class="box">
               <h4 class="title">Segunda</h4>
               <select class="form-control form-control-sm">
-               <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+               <option> 02/12 </option>
+                <option>PRATO PRINCIPAL 1 - FRANGO ASSADO À MODA DO CHEFE</option>
+                <option>PRATO PRINCIPAL 2 - ISCA DE CARNE À BRASILEIRA(COM CALABRESA)</option>
+                <option>NAGRELHA - FRANGO COM BATATA DOCE</option>
+                <option>FAST GRILL - VIRADO PAULISTA</option>
+                <option>VEGETARIANO - BOLONHESA DE LENTILHA COM TALHARIM</option>
+                <option>GUARNIÇÃO - QUEBEBE/ARROZ/CHEIRO VERDE/FEIJÃO PRETO</option>
+                <option>SALADA CRUA - ACELGA COM AGRIÃO E LARANJA</option>
+                <option>SALADA COZIDA - BETERRABA COM CEBOLINHO</option>
+                <option>SOBREMESA - MELANCIA</option>
+                <option>SUCO - MANGA / LIMÃO</option>
               </select>
               <!--<p class="description">Prato1</p> -->
             </div>
@@ -165,17 +169,17 @@
             <div class="box">
               <h4 class="title">Terça</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 03/12 </option>
+                <option>PRATO PRINCIPAL 1 - COPA LOMBO COM FRUTAS</option>
+                <option>PRATO PRINCIPAL 2 - FRANGO COM CREME DE MILHO</option>
+                <option>NAGRELHA - CARNE ASSADA COM LEGUMES E MACARRÃO INTEGRAL</option>
+                <option>FAST GRILL - ESCONDIDINHO</option>
+                <option>VEGETARIANO - ESTROGONOFE DE GRÃO DE BICO</option>
+                <option>GUARNIÇÃO - REPOLHO GRATINADO/ARROZ COM MILHO/FEIJÃO CARIOCA</option>
+                <option>SALADA CRUA - ALFACE COM RÚCULA E ABACAXI</option>
+                <option>SALADA COZIDA - CENOURA COM VAGEM</option>
+                <option>SOBREMESA - CHOCOLATE</option>
+                <option>SUCO - GOIABA / UMBU</option>
               </select>
               <!-- <p class="description">Prato2</p> -->
             </div>
@@ -184,17 +188,17 @@
             <div class="box">
               <h4 class="title">Quarta</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 04/12 </option>
+                <option>PRATO PRINCIPAL 1 - PEITO DE FRANGO COM ERVILHAS</option>
+                <option>PRATO PRINCIPAL 2 - CARNE ASSADA AO MOLHO FERRUGEM </option>
+                <option>NAGRELHA - PEIXE COM ABOBRINHA E TOMATES EM CUBOS</option>
+                <option>FAST GRILL - BAIÃO DE DOIS</option>
+                <option>VEGETARIANO - TORTA DE LEGUMES VEGETARIANO</option>
+                <option>GUARNIÇÃO - ESPAGUETE COM MOLHO PESTO/ARROZ COLORIDO/FEIJÃO PRETO</option>
+                <option>SALADA CRUA - PEPINO COM TOMATE E MANJERICÃO</option>
+                <option>SALADA COZIDA - BATATAS COM COUVE E CEBOLA ROXA</option>
+                <option>SOBREMESA - MAMÃO </option>
+                <option>SUCO - TANGERINA / CAJU </option>
               </select>
               <!-- <p class="description">Prato3</p> -->
             </div>
@@ -204,17 +208,17 @@
             <div class="box">
               <h4 class="title">Quinta</h4>
               <select class="form-control form-control-sm">
-               <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+               <option> 05/12 </option>
+               <option>PRATO PRINCIPAL 1 - BIFE AO MOLHO MADEIRA</option>
+                <option>PRATO PRINCIPAL 2 - PEIXE À ZÉ DO PIPO</option>
+                <option>NAGRELHA - FRANGO GRELHADO COM PIMENTÕES</option>
+                <option>FAST GRILL - QUICHE DE FRANGO</option>
+                <option>VEGETARIANO - ACARAJÉ VEGETARIANO</option>
+                <option>GUARNIÇÃO - ABÓBORA REFOGADA/ARROZ COM ERVILHAS/FEIJÃO CARIOCA</option>
+                <option>SALADA CRUA - CENOURA/ACELGA/TOMATE/PASSAS</option>
+                <option>SALADA COZIDA - ABOBRINHA COM PIMENTÕES COLORIDOS</option>
+                <option>SOBREMESA - DOCE GOIABADA AÇUCARADO </option>
+                <option>SUCO - UVA / ABACAXI COM HORTELÃ</option>
               </select>
               <!-- <p class="description">Prato4</p> -->
             </div>
@@ -223,17 +227,17 @@
             <div class="box">
               <h4 class="title">Sexta</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 06/12 </option>
+                <option>PRATO PRINCIPAL 1 - DOBRADINHA </option>
+                <option>PRATO PRINCIPAL 2 - PEITO DE FRANGO COM PALHA </option>
+                <option>NAGRELHA - BIFE GRELHADO COM CEBOLA(ACOMP. MACARRÃO INTEGRAL)</option>
+                <option>FAST GRILL - CROQUETE DE FRANGO AO MOLHO ROSÉ</option>
+                <option>VEGETARIANO - PANQUECA DE ESPINAFRE</option>
+                <option>GUARNIÇÃO - FAROFA DOURADA/ARROZ BRANCO/FEIJÃO CARIOCA</option>
+                <option>SALADA CRUA - VINAGRETE </option>
+                <option>SALADA COZIDA - CHUCHU COM CENOURA E AZEITONAS</option>
+                <option>SOBREMESA - BANANA</option>
+                <option>SUCO - CAJÁ / ACEROLA</option>
               </select>
               <!--<p class="description">Prato5</p> -->
             </div>
@@ -248,17 +252,17 @@
             <div class="box">
               <h4 class="title">Segunda</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 02/12 </option>
+                <option>PRATO PRINCIPAL 1 - PEITO DE FRANGO COM PALHA</option>
+                <option>PRATO PRINCIPAL 2 - CARNE MOÍDA COM AZEITONAS</option>
+                <option>NAGRELHA - ISCAS DE CARNE ACEBOLADA(ACOMP. MACAXEIRAO)</option>
+                <option>VEGETARIANO - NUGGTES DE MILHO</option>
+                <option>FAST GRILL - ...</option>
+                <option>GUARNIÇÃO - CUSCUZ</option>
+                <option>SOPA - SOPA DE CREME DE MACAXEIRA</option>
+                <option>SALADA CRUA - TOMATE/CHICÓRIA/HORTELÃ</option>
+                <option>SOBREMESA - MELANCIA</option>
+                <option>SUCO - MANGA / LIMÃO</option>
               </select>
               <!-- <p class="description">Prato1</p> -->
             </div>
@@ -267,17 +271,17 @@
             <div class="box">
               <h4 class="title">Terça</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 03/12 </option>
+                <option>PRATO PRINCIPAL 1 - BIFE AO MOLHO FERRUGEM</option>
+                <option>PRATO PRINCIPAL 2 - PEIXE À DELÍCIA</option>
+                <option>NAGRELHA - FRANGO AO FORNO COM ERVAS(ACOMP. BATATA DOCE)</option>
+                <option>VEGETARIANO - QUICHE DE ESPINAFRE</option>
+                <option>FAST GRILL - PARMEGIANA DE FRANGO</option>
+                <option>GUARNIÇÃO - ARROZ COLORIDO</option>
+                <option>SOPA - SOPA CRIOULA(SEM MACARRÃO)</option>
+                <option>SALADA CRUA - ALFACE COM PEPINO E GERGELIM</option>
+                <option>SOBREMESA - CHOCOLATE</option>
+                <option>SUCO - GOIABA / UMBU</option>
               </select>
               <!-- <p class="description">Prato2</p> -->
             </div>
@@ -286,17 +290,17 @@
             <div class="box">
               <h4 class="title">Quarta</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 04/12 </option>
+                <option>PRATO PRINCIPAL 1 - CARNE TAILANDESA(COM MOLHO ESCURO DE CURRY, SHOYU E PIMENTÕES)</option>
+                <option>PRATO PRINCIPAL 2 - FRANGO ASSADO C/ PARMESSÃO</option>
+                <option>NAGRELHA - BIFE COM PIMENTÕES</option>
+                <option>VEGETARIANO - BOLINHO DE MACAXEIRA COM MOLHO</option>
+                <option>FAST GRILL - CREPE</option>
+                <option>GUARNIÇÃO - BATATA DOCE</option>
+                <option>SOPA - SOPA DE LEGUMES</option>
+                <option>SALADA CRUA - BETERRABA, ACELGA E CENOURA</option>
+                <option>SOBREMESA - MAMÃO</option>
+                <option>SUCO - TANGERINA / CAJU</option>
               </select>
               <!--<p class="description">Prato3</p> -->
             </div>
@@ -306,36 +310,36 @@
             <div class="box">
               <h4 class="title">Quinta</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 05/12 </option>
+                <option>PRATO PRINCIPAL 1 - FRANGO GRELHADO À PRIMAVERA</option>
+                <option>PRATO PRINCIPAL 2 - ALMÔNDEGA AO MOLHO BARBECUE</option>
+                <option>NAGRELHA - PEITO DE FRANGO COM ABÓBORA</option>
+                <option>VEGETARIANO - NHOQUE VEGETARIANO</option>
+                <option>FAST GRILL - LASANHA DE FRANGO</option>
+                <option>GUARNIÇÃO - ESPAGUETE</option>
+                <option>SOPA - CALDO VERDE</option>
+                <option>SALADA CRUA - MIX DE FOLHAS COM REPOLHO ROXO</option>
+                <option>SOBREMESA - DOCE GOIABADA AÇUCARADO</option>
+                <option>SUCO - UVA / ABACAXI COM HORTELÃ</option>
               </select>
               <!--<p class="description">Prato4</p> -->
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <h4 class="title">>Sexta</h4>
+              <h4 class="title">Sexta</h4>
               <select class="form-control form-control-sm">
-                <option> ... </option>
-                <option>PRATO PRINCIPAL 1 - FRANGO AO FORNO </option>
-                <option>PRATO PRINCIPAL 2 - FRANGO AO FORNO </option>
-                <option>NA GRELHA - FRANGO AO FORNO </option>
-                <option>VEGETARIANO - FRANGO AO FORNO </option>
-                <option>FAST GRILL - FRANGO AO FORNO </option>
-                <option>GUARNIÇÃO - FRANGO AO FORNO </option>
-                <option>SOPA - FRANGO AO FORNO </option>
-                <option>SALADA CRUA - FRANGO AO FORNO </option>
-                <option>SOBREMESA - FRANGO AO FORNO </option>
-                <option>SUCO - FRANGO AO FORNO </option>
+                <option> 06/12 </option>
+               <option>PRATO PRINCIPAL 1 - CARNE DE SOL ACEBOLADA</option>
+                <option>PRATO PRINCIPAL 2 - FRANGO AO MOLHO DE TOMATE COM MANJERICÃO</option>
+                <option>NAGRELHA - PEIXE COM LIMÃO</option>
+                <option>VEGETARIANO - BERINJELA À PARMEGIANA COM ESPAGUETE</option>
+                <option>FAST GRILL - ...</option>
+                <option>GUARNIÇÃO - MACAXEIRA</option>
+                <option>SOPA - CREME DE ABÓBORA</option>
+                <option>SALADA CRUA - TOMATE COM CEBOLA ROXA E ACELGA</option>
+                <option>SOBREMESA - BANANA</option>
+                <option>SUCO - CAJU / ACEROLA</option>
               </select>
               <!-- <p class="description">Prato5</p> -->
             </div>
@@ -447,6 +451,7 @@
   <!-- Contact Form JavaScript File -->
   <script src="/static/contactform/contactform.js"></script>
   <script src="/static/portfolioform/portfolioform.js"></script>
+  <script src="/static/estimar/estimar.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="/static/js/main.js"></script>
