--- a/SistemaRU/Templates/index.html
+++ b/SistemaRU/Templates/index.html
@@ -7,34 +7,23 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <!-- Favicons -->
   <link href="/static/img/favicon.png" rel="icon">
   <link href="/static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
 
-  <!-- Bootstrap CSS File -->
   <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Libraries CSS Files -->
   <link href="/static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="/static/lib/animate/animate.min.css" rel="stylesheet">
 
-  <!-- Main Stylesheet File -->
   <link href="/static/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
 
-  <!--==========================
-  Header
-  ============================-->
+
   <header id="header">
     <div class="container">
 
@@ -47,24 +36,18 @@
           <li><a href="#team">Cardápio</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
     </div>
-  </header><!-- #header -->
+  </header>
 
-  <!--==========================
-    Welcome Section
-  ============================-->
   <section id="hero">
     <div class="hero-container">
       <h1>Bem vindo ao Sistema RU</h1>
     </div>
-  </section><!-- #hero -->
+  </section>
 
   <main id="main">
 
-    <!--==========================
-      About RU Section
-    ============================-->
     <section id="sobreru">
       <div class="container">
         <div class="row about-container">
@@ -88,12 +71,8 @@
         </div>
 
       </div>
-    </section> <!-- #about -->
+    </section>
 
-
-    <!--==========================
-      Fila do RU Section
-    ============================-->
     <section id="services">
       <div class="container wow fadeIn">
         <div class="section-header">
@@ -106,11 +85,8 @@
           </div>
         </div>
       </div>
-    </section><!-- #fila -->
+    </section>
 
-    <!--==========================
-      Cadastro Cardápio Section
-    ============================-->
     <section id="portfolio">
       <div class="container wow fadeInUp">
         <div class="section-header">
@@ -131,11 +107,8 @@
           </div>
         </div>
       </div>
-    </section> <!-- #cadastro -->
+    </section>
 
-    <!--==========================
-      Cardápio Section
-    ============================-->
     <section id="team">
       <div class="container wow fadeInUp">
         <div class="section-header">
@@ -162,7 +135,7 @@
                 <option>SOBREMESA - MELANCIA</option>
                 <option>SUCO - MANGA / LIMÃO</option>
               </select>
-              <!--<p class="description">Prato1</p> -->
+
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -181,7 +154,7 @@
                 <option>SOBREMESA - CHOCOLATE</option>
                 <option>SUCO - GOIABA / UMBU</option>
               </select>
-              <!-- <p class="description">Prato2</p> -->
+
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -200,7 +173,7 @@
                 <option>SOBREMESA - MAMÃO </option>
                 <option>SUCO - TANGERINA / CAJU </option>
               </select>
-              <!-- <p class="description">Prato3</p> -->
+
             </div>
           </div>
 
@@ -220,7 +193,7 @@
                 <option>SOBREMESA - DOCE GOIABADA AÇUCARADO </option>
                 <option>SUCO - UVA / ABACAXI COM HORTELÃ</option>
               </select>
-              <!-- <p class="description">Prato4</p> -->
+
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -239,7 +212,7 @@
                 <option>SOBREMESA - BANANA</option>
                 <option>SUCO - CAJÁ / ACEROLA</option>
               </select>
-              <!--<p class="description">Prato5</p> -->
+
             </div>
           </div>
         </div>
@@ -264,7 +237,7 @@
                 <option>SOBREMESA - MELANCIA</option>
                 <option>SUCO - MANGA / LIMÃO</option>
               </select>
-              <!-- <p class="description">Prato1</p> -->
+
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -283,7 +256,7 @@
                 <option>SOBREMESA - CHOCOLATE</option>
                 <option>SUCO - GOIABA / UMBU</option>
               </select>
-              <!-- <p class="description">Prato2</p> -->
+
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -302,7 +275,7 @@
                 <option>SOBREMESA - MAMÃO</option>
                 <option>SUCO - TANGERINA / CAJU</option>
               </select>
-              <!--<p class="description">Prato3</p> -->
+
             </div>
           </div>
 
@@ -322,7 +295,7 @@
                 <option>SOBREMESA - DOCE GOIABADA AÇUCARADO</option>
                 <option>SUCO - UVA / ABACAXI COM HORTELÃ</option>
               </select>
-              <!--<p class="description">Prato4</p> -->
+
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -341,16 +314,13 @@
                 <option>SOBREMESA - BANANA</option>
                 <option>SUCO - CAJU / ACEROLA</option>
               </select>
-              <!-- <p class="description">Prato5</p> -->
+
             </div>
           </div>
         </div>
       </div>
-    </section> <!-- #cardapio -->
+    </section>
 
-    <!--==========================
-      Contato Section
-    ============================-->
     <section id="contact">
       <div class="container wow fadeInUp">
         <div class="section-header">
@@ -405,13 +375,10 @@
        </div>
         </div>
       </div>
-    </section><!-- #contact -->
+    </section>
 
   </main>
 
-  <!--==========================
-    Footer
-  ============================-->
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -424,20 +391,14 @@
         &copy; Copyright <strong>Sistema RU</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
-        -->
+
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- #footer -->
+  </footer>
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-  <!-- JavaScript Libraries -->
   <script src="/static/lib/jquery/jquery.min.js"></script>
   <script src="/static/lib/jquery/jquery-migrate.min.js"></script>
   <script src="/static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -448,12 +409,10 @@
   <script src="/static/lib/superfish/hoverIntent.js"></script>
   <script src="/static/lib/superfish/superfish.min.js"></script>
 
-  <!-- Contact Form JavaScript File -->
   <script src="/static/contactform/contactform.js"></script>
   <script src="/static/portfolioform/portfolioform.js"></script>
   <script src="/static/estimar/estimar.js"></script>
 
-  <!-- Template Main Javascript File -->
   <script src="/static/js/main.js"></script>
 
 </body>
